--- a/index.html
+++ b/index.html
@@ -4,32 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css"> 
 </head>
     <body>
-    <div class="col">
-    <div class="col" class="formdiv">
-    <div class="container-md mt-5 border">
+    <div class="container-fluid formdiv col-lg-6 offset-lg-3">
         <form action="/action_page.php">
         <div class="container mt-3">
             <h1>freeCodeCamp Survey Form</h1>
             <p style="font-style: italic;">Thank you for taking the time to help us improve the platform</p>
         </div>
-        <div class="container mt-3">
+        <div class="mt-3">
             <label for="name" class="form label">Name</label><br>
             <input type="name" class="form-control" id="name" placeholder="Enter your name">
         </div>
-        <div class="container mt-3">
-            <label for="email" class="form label">email</label><br>
+        <div class="mt-3">
+            <label for="email" class="form label">Email</label><br>
             <input type="email" class="form-control" id="name" placeholder="Enter your Email"><br>
         </div>
-        <div class="container mt-3">
+        <div class="mt-3">
             <label for="age" class="form label">Age(optional)</label><br>
-            <input type="age" class="form control" id="name" placeholder="Age"><br>
+            <input type="age" class="form-control" id="name" placeholder="Age"><br>
             </div>
-        <div class="container mt-3">
+        <div class="mt-3">
             <h5>What is your favorite features of free code camp</h5>                                     
             <div class="dropdown dropdown-menu-end">
         
@@ -44,7 +41,7 @@
                 <li><a class="dropdown-item" href="#">Back-end Engineer</a></li>
             </ul>
             </div>
-            <div class="container mt-3">
+            <div class="mt-3">
             <h3>Would you recommend freeCodeCamp to a friend?</h3>
             <input type="radio" id="option1" name="options">
             <label for="option1">Definitely</label><br>
@@ -53,7 +50,7 @@
             <input type="radio" id="option3" name="options">
             <label for="option3">Not sure</label><br>
             </div>
-            <div class="container mt-3">
+            <div class="mt-3">
             <h3>What will you like to see improved? (check all that apply)</h3>
                 <input type="text" value="Select an option"><br>
                 <input type="checkbox" id="option1" name="options"> 
@@ -79,15 +76,16 @@
                 <input type="checkbox" id="option11" name="options">
                 <label for="option11">Additional Courses</label><br>
             </div>
-            <div class="container mt-3">
+            <div class="mt-3">
             <h2>Any Comments or suggestions?</h2>
-            <div class="container mt-3">
+            <div class="mt-3">
             <textarea name="message" rows="3" cols="70">"Enter your comment here...."</textarea>
             </div>
-            <div class="container mt-3">
+            <div class="mt-3">
             <button type= "button" class="btn btn-success">Submit</button>
             </div>
             </div>
-        </form>  
+        </form>
+        </div>  
     </body>
 </html>
