--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css"> 
 </head>
     <body>
     <div class="container-fluid formdiv col-lg-6 offset-lg-3">
         <form action="/action_page.php">
-        <div class="container mt-3">
+        <div class="mt-3">
             <h1>freeCodeCamp Survey Form</h1>
             <p style="font-style: italic;">Thank you for taking the time to help us improve the platform</p>
         </div>
@@ -26,20 +26,16 @@
             <label for="age" class="form label">Age(optional)</label><br>
             <input type="age" class="form-control" id="name" placeholder="Age"><br>
             </div>
-        <div class="mt-3">
-            <h5>What is your favorite features of free code camp</h5>                                     
-            <div class="dropdown dropdown-menu-end">
-        
-            <input type="text" value="Select current role"><br>         
-            </div>
-            </div>
-            <div class="drop down">
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Frontend Engineer</a></li>
-                <li><a class="dropdown-item" href="#">Data Analyst</a></li>
-                <li><a class="dropdown-item" href="#">Product Design</a></li>
-                <li><a class="dropdown-item" href="#">Back-end Engineer</a></li>
-            </ul>
+        <div class="mt-3">  
+            <label for="dropdown" id="dropdown">
+            <p id="whichoption">Which option best describes your current role?</p>
+            <select name="occupation" id="dropdown">
+              <option value="">Select current role</option>
+              <option value="student">Frontend Engineer</option>
+              <option value="employed">Data Analyst</option>
+              <option value="business">Product Designer</option>
+              <option value="prefernottosay">Prefer Not To Say</option>
+            </select>                                     
             </div>
             <div class="mt-3">
             <h3>Would you recommend freeCodeCamp to a friend?</h3>
@@ -50,9 +46,18 @@
             <input type="radio" id="option3" name="options">
             <label for="option3">Not sure</label><br>
             </div>
+            <p id="Whatoption">What is your favorite feature of freeCodeCamp?</p>
+            <label for="dropdown">
+                <select name="favouritefeature" id="dropdown">
+                  <option value="">Select an option</option>
+                  <option value="Html5">Html5</option>
+                  <option value="CSS">CSS</option>
+                  <option value="Jscript">Jscript</option>
+                  <option value="otherfeature">Other features</option>
+                </select>
+              </label>
             <div class="mt-3">
-            <h3>What will you like to see improved? (check all that apply)</h3>
-                <input type="text" value="Select an option"><br>
+            <h3>What would you like to see improved? (check all that apply)</h3>
                 <input type="checkbox" id="option1" name="options"> 
                 <label for="option1">Front-end Projects</label><br>
                 <input type="checkbox" id="option2" name="options">
@@ -79,7 +84,7 @@
             <div class="mt-3">
             <h2>Any Comments or suggestions?</h2>
             <div class="mt-3">
-            <textarea name="message" rows="3" cols="70">"Enter your comment here...."</textarea>
+            <textarea name="message" rows="3" cols="60">Enter your comment here....</textarea>
             </div>
             <div class="mt-3">
             <button type= "button" class="btn btn-success">Submit</button>
