--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form action="/action_page.php">
         <div class="mt-3">
             <h1>freeCodeCamp Survey Form</h1>
-            <p style="font-style: italic;">Thank you for taking the time to help us improve the platform</p>
+            <p style="font-style: italic; font-size: 35px;">Thank you for taking the time to help us improve the platform</p>
         </div>
         <div class="mt-3">
             <label for="name" class="form label">Name</label><br>
@@ -28,7 +28,7 @@
             </div>
         <div class="mt-3">  
             <label for="dropdown" id="dropdown">
-            <p id="whichoption">Which option best describes your current role?</p>
+            <h6>Which option best describes your current role?</h6>
             <select name="occupation" id="dropdown">
               <option value="">Select current role</option>
               <option value="student">Frontend Engineer</option>
@@ -46,7 +46,7 @@
             <input type="radio" id="option3" name="options">
             <label for="option3">Not sure</label><br>
             </div>
-            <p id="Whatoption">What is your favorite feature of freeCodeCamp?</p>
+            <h6>What is your favorite feature of freeCodeCamp?</h6>
             <label for="dropdown">
                 <select name="favouritefeature" id="dropdown">
                   <option value="">Select an option</option>
